# Quant2026

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: test.yml
config/: aggressive.yaml  conservative.yaml  default.yaml
examples/: demo_attribution.py  demo_config_pipeline.py  demo_event_driven.py  demo_factor_evaluation.py  demo_ml_pipeline.py  demo_optimization.py  demo_pipeline.py  demo_risk.py  demo_stat_arb.py  demo_walk_forward.py
examples/output/: factor_evaluation.html  report.html  stat_arb_report.html  walk_forward_report.html
knowledge/: event_driven_strategy.md  mean_reversion_strategy.md  ml_strategy.md  momentum_strategy.md  multi_factor_strategy.md  stat_arb_strategy.md
quant2026/: __main__.py  cli.py  config.py  factory.py  logging.py  types.py
quant2026/backtest/: __init__.py  attribution.py  engine.py  report.py  walk_forward.py
quant2026/data/: __init__.py  akshare_provider.py  base.py  cache.py  cleaner.py
quant2026/execution/: __init__.py  order_simulator.py  simulator.py  t_plus_one.py  volume_constraint.py
quant2026/factor/: __init__.py  base.py  evaluation.py  library.py  preprocessing.py  registry.py
quant2026/optimization/: __init__.py  param_optimizer.py
quant2026/portfolio/: __init__.py  markowitz.py  optimizer.py  risk_parity.py  turnover.py
quant2026/risk/: __init__.py  manager.py  stop_loss.py  var.py
quant2026/utils/: plot.py
tests/: conftest.py  test_attribution.py  test_cache.py  test_cli.py  test_config.py  test_event_driven.py  test_execution.py  test_factor_evaluation.py  test_factors.py  test_financial_data.py  test_integration.py  test_logging.py  test_mean_reversion.py  test_ml_strategy.py  test_optimization.py  test_portfolio_opt.py  test_risk_var.py  test_signal_rebalance.py  test_stat_arb.py  test_turnover.py  test_types.py  test_walk_forward.py
(+15 files in other folders)
